Removing check for "chunked" from test and looking for Accept-Range and Content-Length headers instead.